--- a/.github/workflows/manual-release-start.yml
+++ b/.github/workflows/manual-release-start.yml
@@ -17,6 +17,8 @@ jobs:
     steps:
     - name: Checkout
       uses: actions/checkout@v3
+      with:
+        fetch-depth: 0
     - name: Set up JDK 11
       uses: actions/setup-java@v3
       with:
@@ -34,11 +36,10 @@ jobs:
       id: cpr
       uses: devops-infra/action-pull-request@v0.5.5
       with:
-        github_token: ${{ secrets.GITHUB_TOKEN }}
         target_branch: main
         title: Release PR - Version ${{ github.event.inputs.version }}
         body: "**Created by manual action GitFlow Release Start**"
-        label: enhancement
+        label: release
         draft: false
         ignore_users: "dependabot"
     - name: PR details
