--- a/.github/workflows/manual-release-start.yml
+++ b/.github/workflows/manual-release-start.yml
@@ -36,6 +36,7 @@ jobs:
       id: cpr
       uses: devops-infra/action-pull-request@v0.5.5
       with:
+        github_token: ${{ secrets.GITHUB_TOKEN }}
         target_branch: main
         title: Release PR - Version ${{ github.event.inputs.version }}
         body: "**Created by manual action GitFlow Release Start**"
