Add additional permissions

--- a/.github/workflows/manual-release-start.yml
+++ b/.github/workflows/manual-release-start.yml
@@ -11,8 +11,7 @@ jobs:
     name: Release Start
     runs-on: ubuntu-latest
 
-    permissions:
-      contents: write
+    permissions: write-all
 
     steps:
     - name: Checkout
